--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
   <header>
     <!-- 本站所有网页的统一主标题 -->
+    <img src="view/images/beach-ball.png">
     <h1>欢迎来到<strong>篮球世界</strong></h1>
     <img src="view/images/beach-ball.png">
   </header>
