--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="utf-8">
+  <link href="view/styles/normalize.css" rel="stylesheet" type="text/css">
   <link href="view/styles/style.css" rel="stylesheet" type="text/css">
   <link href="https://fonts.font.im/css?family=Open+Sans" rel="stylesheet" type="text/css">
   <title>篮球世界</title>
@@ -49,9 +50,8 @@
 
     <aside>
       <!-- 侧边栏在主内容右侧 -->
-      <h2>相关链接</h2>
+      <h2><a href="view/admin/login.html">登录</a></h2>
       <ul>
-        <li><a href="#">这是一个超链接</a></li>
         <!-- 侧边栏有n个超链接，略略略…… -->
       </ul>
     </aside>
