实现基本功能，修改架构，实现面向对象设计。提交留言插入数据表返回false，但是数据库存在插入的数据

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="utf-8">
+  <script src="view/scripts/main.js"></script>
   <link href="view/styles/normalize.css" rel="stylesheet" type="text/css">
   <link href="view/styles/style.css" rel="stylesheet" type="text/css">
   <link href="https://fonts.font.im/css?family=Open+Sans" rel="stylesheet" type="text/css">
@@ -36,16 +37,13 @@
     <article>
       <img name="site" src="view/images/site.jpg" alt="My test image">
       <p>篮球世界是一个全球社区，这里聚集着来自五湖四海的</p>
-      <ul>
-        <li>爱好者</li>
-        <li>思考者</li>
-        <li>建造者</li>
+      <ul id="art_list">
       </ul>
       <p>我们致力于……</p>
       <button>切换用户</button>
 
       <!-- 此处包含一个 article（一篇文章），内容略…… -->
-      
+
     </article>
 
     <aside>
@@ -62,7 +60,6 @@
     <p>© 2050 某某保留所有权利</p>
   </footer>
 
-  <script src="view/scripts/main.js"></script>
 </body>
 
 </html>
