基本完成留言板的留言功能

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
     <aside>
       <!-- 侧边栏在主内容右侧 -->
-      <h2><a href="view/admin/login.html">登录</a></h2>
+      <h2><a href="controller/admin/login.php">登录</a></h2>
       <ul>
         <!-- 侧边栏有n个超链接，略略略…… -->
       </ul>
