--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 
 <head>
   <meta charset="utf-8">
+  <!-- <script src="https://code.jquery.com/jquery-3.4.1.js" integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="
+    crossorigin="anonymous"></script> -->
   <script src="view/scripts/main.js"></script>
   <link href="view/styles/normalize.css" rel="stylesheet" type="text/css">
   <link href="view/styles/style.css" rel="stylesheet" type="text/css">
