完成接口的token验证

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <!-- 本站所有网页的统一主标题 -->
     <ul>
       <li><a href="#">主页</a></li>
-      <li><a href="view/index/bbs.html">留言板</a></li>
+      <!-- <li><a href="view/index/bbs.html">留言板</a></li> -->
       <!-- 共n个导航栏项目，省略…… -->
     </ul>
     <form>
